하드코딩없이 부트스트랩으로 동일한 레이아웃 완성

--- a/css/type_1.css
+++ b/css/type_1.css
@@ -1,4 +1,4 @@
-#hd {
+/* #hd {
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -31,4 +31,4 @@
 }
 #hd .member li {
   margin-left: 1rem;
-}
+} */
