--- a/css/type_2.css
+++ b/css/type_2.css
@@ -1,4 +1,4 @@
-.inner {
+/* .inner {
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -29,4 +29,4 @@
   height: 0;
   overflow: hidden;
   opacity: 0;
-}
+} */
