--- a/scss/type_2.scss
+++ b/scss/type_2.scss
@@ -1,42 +1,42 @@
 
 
-.inner{
-    max-width: 1440px;
-    margin: 0 auto;
+// .inner{
+//     max-width: 1440px;
+//     margin: 0 auto;
 
-}
+// }
 
-.mr-auto{
-    margin-right: auto;
-}
+// .mr-auto{
+//     margin-right: auto;
+// }
 
-.d-flex{
-    display: flex;
-
-
-}
-
-.text-gray{
-    color: #666;
+// .d-flex{
+//     display: flex;
 
 
-}
+// }
 
-.bg-gray{
-    background-color: #ccc;
+// .text-gray{
+//     color: #666;
 
-}
 
-.round50{
-    border-radius: 50px;
+// }
 
-}
+// .bg-gray{
+//     background-color: #ccc;
 
-.sr_only{
-    position: absolute;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
+// }
 
-}
+// .round50{
+//     border-radius: 50px;
+
+// }
+
+// .sr_only{
+//     position: absolute;
+//     width: 0;
+//     height: 0;
+//     overflow: hidden;
+//     opacity: 0;
+
+// }
