--- a/css/type_1.css
+++ b/css/type_1.css
@@ -1,6 +1,9 @@
 #hd a {
   text-decoration: none;
 }
+#hd .gnb .d1:hover ul {
+  display: block;
+}
 #hd .gnb .d1 .gnb_d1_a {
   font-size: 1.2em;
   color: black;
@@ -9,6 +12,7 @@
   min-width: 80px;
   white-space: nowrap;
   background-color: black !important;
+  display: none;
 }
 #hd .gnb .d1 ul.leftul {
   left: -2rem;
