--- a/scss/type_1.scss
+++ b/scss/type_1.scss
@@ -60,12 +60,22 @@
 // }
 
 #hd{
-    a{
+    a{  
         text-decoration: none;
     }
     .gnb{
         .d1{
+            //대메뉴 li
+            
+            
+            &:hover{
+                //대메뉴에 롤오버시 소메뉴 노출
+                ul{
+                    display: block;
+                }
+            }
             .gnb_d1_a{
+                //대메뉴 
                font-size: 1.2em;
                color:black;
             }
@@ -74,6 +84,7 @@
                 min-width: 80px;
                 white-space: nowrap;
                 background-color: black !important;
+                display: none;
                 &.leftul{
                     left:-2rem;
                 }               
