일관된 소메뉴의 애니메이션

--- a/scss/type_1.scss
+++ b/scss/type_1.scss
@@ -71,7 +71,7 @@
             &:hover{
                 //대메뉴에 롤오버시 소메뉴 노출
                 ul{
-                    display: block;
+                    height: 120px;
                 }
             }
             .gnb_d1_a{
@@ -84,7 +84,13 @@
                 min-width: 80px;
                 white-space: nowrap;
                 background-color: black !important;
-                display: none;
+                height: 0;
+                transition: 0.5s;
+                overflow: hidden;
+                padding: 0 1rem !important;
+                border: 0 !important;
+                
+
                 &.leftul{
                     left:-2rem;
                 }               
