--- a/css/type_1.css
+++ b/css/type_1.css
@@ -2,7 +2,7 @@
   text-decoration: none;
 }
 #hd .gnb .d1:hover ul {
-  height: 120px;
+  max-height: 120px;
 }
 #hd .gnb .d1 .gnb_d1_a {
   font-size: 1.2em;
@@ -12,11 +12,16 @@
   min-width: 80px;
   white-space: nowrap;
   background-color: black !important;
-  height: 0;
+  max-height: 0;
   transition: 0.5s;
   overflow: hidden;
   padding: 0 1rem !important;
   border: 0 !important;
+}
+#hd .gnb .d1 ul:before, #hd .gnb .d1 ul:after {
+  content: "";
+  display: block;
+  height: 16px;
 }
 #hd .gnb .d1 ul.leftul {
   left: -2rem;
