--- a/scss/type_1.scss
+++ b/scss/type_1.scss
@@ -71,7 +71,7 @@
             &:hover{
                 //대메뉴에 롤오버시 소메뉴 노출
                 ul{
-                    height: 120px;
+                    max-height: 120px;
                 }
             }
             .gnb_d1_a{
@@ -84,20 +84,29 @@
                 min-width: 80px;
                 white-space: nowrap;
                 background-color: black !important;
-                height: 0;
+                max-height: 0;
                 transition: 0.5s;
                 overflow: hidden;
                 padding: 0 1rem !important;
                 border: 0 !important;
+
+                &:before,
+                &:after{
+                    content: "";
+                    display: block;
+                    height: 16px;
+                }
                 
 
                 &.leftul{
                     left:-2rem;
                 }               
                 li{
+                    
                     a{
                         font-size: 0.85rem;
                         color:white !important;
+                        
                     }
                 }
             }
