대메뉴 롤오버 소메뉴

--- a/scss/type_2.scss
+++ b/scss/type_2.scss
@@ -51,8 +51,8 @@
             height: 180px;
         }
         
-        li:hover{
-            a{
+        >li:hover{
+          >  a{
                 color: red;
             }
         }
