--- a/css/type_3.css
+++ b/css/type_3.css
@@ -25,16 +25,17 @@
   min-width: 10rem;
   background-color: white;
   margin-top: -1px;
-  border: solid #ccc;
+  border: 1px solid #ccc;
   border-top: 0;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 0;
   border-radius: 0;
   overflow: hidden;
   transform: translateX(-50%);
   left: 50%;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.5s ease-in-out, border-bottom-width 0.5s ease-in-out, border-radius 0.5s ease-in-out;
+  transition: 0.5s;
+  border-radius: 0.5s;
   transition-delay: 0.3s;
 }
 #hd .gnb .gnb_ul:after, #hd .gnb .gnb_ul:before {
@@ -43,7 +44,7 @@
   height: 1rem;
 }
 #hd .gnb .gnb_ul:after {
-  border-bottom: 1px none;
+  border-bottom: 1px solid #ccc;
 }
 #hd .iconMenu i {
   white-space: nowrap;
