--- a/css/type_3.css
+++ b/css/type_3.css
@@ -1,50 +1,55 @@
+a {
+  color: black;
+  text-decoration: none;
+}
+
+#hd {
+  position: relative;
+}
 #hd h1,
 #hd .iconMenu {
   width: 0;
 }
-#hd a {
-  color: black;
-  text-decoration: none;
-}
 #hd h1 a {
   white-space: nowrap;
 }
-#hd .gnb .gnb_li:hover .gnb_a {
+#hd .gnb:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  height: 0px;
+  transition: 0.5s;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+#hd .gnb:hover:before {
+  height: 180px;
+}
+#hd .gnb:hover .gnb_li:hover .gnb_a {
   color: red;
 }
-#hd .gnb .gnb_li:hover .gnb_ul {
-  max-height: 180px;
-  border-bottom-width: 1px;
-  border-radius: 0 0 30px 30px;
-  transition: max-height 0.5s ease-in-out, border-bottom-width 0.5s ease-in-out, border-radius 0.5s ease-in-out 0.3s;
+#hd .gnb:hover .gnb_li .gnb_ul {
+  height: 180px;
 }
-#hd .gnb .gnb_a {
+#hd .gnb_li {
+  padding: 0 35px !important;
+}
+#hd .gnb_li .gnb_a {
   font-size: 1.2rem;
 }
-#hd .gnb .gnb_ul {
+#hd .gnb_li .gnb_ul {
   min-width: 10rem;
-  background-color: white;
-  margin-top: -1px;
-  border: 1px solid #ccc;
-  border-top: 0;
-  border-bottom: 0;
-  border-radius: 0;
   overflow: hidden;
-  transform: translateX(-50%);
-  left: 50%;
-  max-height: 0;
-  overflow: hidden;
+  height: 0px;
   transition: 0.5s;
-  border-radius: 0.5s;
-  transition-delay: 0.3s;
+  left: -35px;
+  text-align: center;
 }
-#hd .gnb .gnb_ul:after, #hd .gnb .gnb_ul:before {
+#hd .gnb_li .gnb_ul:after, #hd .gnb_li .gnb_ul:before {
   content: "";
   display: block;
   height: 1rem;
-}
-#hd .gnb .gnb_ul:after {
-  border-bottom: 1px solid #ccc;
 }
 #hd .iconMenu i {
   white-space: nowrap;
